src/test/deca/syntax/invalid/provided/multiplication.deca
/*/ Description:
//    Programme effectuant l'opération de multiplication de façon incorrecte
//
// Resultats: Erruer de syntaxe
//
//
// Historique:
//    cree le 01/01/2022*/

{
        int x = 3;
	int y = 4;
	int z;
	z = *xy;
	println(z);
}
